--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@types/showdown": "^1.7.2",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
+    "showdown": "^1.8.6",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
